update the code link

--- a/index.html
+++ b/index.html
@@ -161,12 +161,12 @@
 					</a>
 					</span>
 				<span class="link-block">
-				<a href="https://yilin-wu98.github.io/forewarn/"
+				<a href="https://github.com/CMU-IntentLab/Forewarn/tree/main"
 					class="external-link button is-normal is-rounded is-dark">
 					<span class="icon">
 						<i class="fab fa-github"></i>
 					</span>
-					<span>Code (Coming soon)</span>
+					<span>Code</span>
 					</a>
 				</span>
             </div>
@@ -1397,3 +1397,4 @@ select action plans at runtime that are most appropriate for new task contexts a
 
 </body>
 </html>
+
