--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
       <div class="columns is-centered">
         <div class="column has-text-centered">
           <h1 class="title is-1 publication-title">When to Act, Ask, or Learn: <br>Uncertainty-Aware Policy Steering</h1>
-          <h1 class="title is-5 publication-title">In Submission</h1>
+          <h1 class="title is-5 publication-title">Under Review</h1>
 		  <div class="is-size-5 publication-authors">
 			<span class="author-block">
 				<a href="https://jessie-yuan.github.io/">Jessie Yuan</a><sup>1*</sup>,</span>
@@ -215,7 +215,7 @@
         </div>
         <div class="item item-fullbody">
           <video poster="" id="fullbody" autoplay controls muted loop playsinline height="100%">
-            <source src="./static/videos/opening_carousel/ups_ambiguous.mp4"
+            <source src="./static/videos/opening_carousel/ups_ambiguous_paused.mp4"
                     type="video/mp4">
           </video>
 		  <p>
